# PenguCode

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/controllers/app/: appcontroller.cpp  appcontroller.h  sessionmanager.cpp  sessionmanager.h
src/core/framework/: moduleinterface.cpp  moduleinterface.h  modulemanager.cpp  modulemanager.h  moduleregistry.cpp  moduleregistry.h
src/core/logging/: crashhandler.cpp  crashhandler.h  logger.cpp  logger.h  logmodel.cpp  logmodel.h
src/core/settings/: settingsmanager.cpp  settingsmanager.h
src/core/theme/: themeengine.cpp  themeengine.h
src/libs/pengucore/: CMakeLists.txt
src/libs/pengucore/include/pengucore/api/: pengucoreengine.h  pengucoresessionreportservice.h
src/libs/pengucore/include/pengucore/capture/: livecaptureengine.h  pcapfilereader.h  pcapfilewriter.h
src/libs/pengucore/include/pengucore/flow/: flowtracker.h
src/libs/pengucore/include/pengucore/model/: packettypes.h
src/libs/pengucore/include/pengucore/parser/: basicframeparser.h
src/libs/pengucore/src/api/: pengucoreengine.cpp  pengucoresessionreportservice.cpp
src/libs/pengucore/src/capture/: livecaptureengine.cpp  pcapfilereader.cpp  pcapfilewriter.cpp
src/libs/pengucore/src/flow/: flowtracker.cpp
src/libs/pengucore/src/parser/: basicframeparser.cpp
src/modules/pengucore/: pengucoremodule.cpp  pengucoremodule.h
src/modules/portscanner/: portscannermodule.cpp  portscannermodule.h
src/modules/proxy/: proxymodule.cpp  proxymodule.h
src/modules/proxy/engine/: localresearchcore.cpp  localresearchcore.h  proxycore.cpp  proxycore.h
src/modules/recon/: reconmodule.cpp  reconmodule.h
src/modules/recon/engine/: dnsreconmodule.cpp  dnsreconmodule.h  fastportscannermodule.cpp  fastportscannermodule.h  osintandleakmodule.cpp  osintandleakmodule.h  pengufoce_masterscanner.cpp  pengufoce_masterscanner.h  reconcoreutils.cpp  reconcoreutils.h  reconorchestratorstate.cpp  reconorchestratorstate.h  reconreportbuilder.cpp  reconreportbuilder.h  reconwebinsights.cpp  reconwebinsights.h  scanorchestrator.cpp  scanorchestrator.h  scantypes.h  vulnmatchermodule.cpp  vulnmatchermodule.h
src/modules/spider/: spidermodule.cpp  spidermodule.h
src/modules/spider/engine/: cdpclient.cpp  cdpclient.h  htmlextractor.cpp  htmlextractor.h  spidercore.cpp  spidercore.h  spiderhostinsights.cpp  spiderhostinsights.h  spiderreportbuilder.cpp  spiderreportbuilder.h  spiderscope.cpp  spiderscope.h  spiderworkflow.cpp  spiderworkflow.h
src/ui/layout/: flowlayout.cpp  flowlayout.h  workspacecontainers.cpp  workspacecontainers.h
src/ui/panels/controlcenter/: settingslogwidget.cpp  settingslogwidget.h
src/ui/shell/: bladesidebar.cpp  bladesidebar.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
src/ui/shell/qml/: OrbitalSidebar2D.qml  OrbitalSidebar3D.qml
src/ui/views/pengucore/: pengucorebrowserpanel.cpp  pengucorebrowserpanel.h  pengucorecontrolpanel.cpp  pengucorecontrolpanel.h  pengucorefilterpanel.cpp  pengucorefilterpanel.h  pengucoreinspectorpanel.cpp  pengucoreinspectorpanel.h  pengucoresessionpanel.cpp  pengucoresessionpanel.h  pengucorewidget.cpp  pengucorewidget.h
src/ui/views/portscanner/: portscannerwidget.cpp  portscannerwidget.h
src/ui/views/proxy/: proxybottompanel.cpp  proxybottompanel.h  proxyruntimepanel.cpp  proxyruntimepanel.h  proxywidget.cpp  proxywidget.h
src/ui/views/recon/: reconcontrolpanel.cpp  reconcontrolpanel.h  reconevidencepanel.cpp  reconevidencepanel.h  reconfindingspanel.cpp  reconfindingspanel.h  reconlivepanel.cpp  reconlivepanel.h  reconreportpanel.cpp  reconreportpanel.h  reconsummarypanel.cpp  reconsummarypanel.h  reconwidget.cpp  reconwidget.h
src/ui/views/spider/: spiderhosthealthpanel.cpp  spiderhosthealthpanel.h  spiderresultspanel.cpp  spiderresultspanel.h  spidersetuppanel.cpp  spidersetuppanel.h  spiderwidget.cpp  spiderwidget.h
src/ui/widgets/: reportpreviewdialog.cpp  reportpreviewdialog.h
tests/: core_state_tests.cpp  pengucore_tests.cpp  recon_engine_tests.cpp  recon_orchestrator_state_tests.cpp  recon_web_tls_tests.cpp  spider_core_tests.cpp  spider_extractor_tests.cpp  spider_host_insights_tests.cpp  spider_workflow_tests.cpp
tests/fixtures/pengucore/: README.md  arp_sample.pcap  http_exchange_sample.pcap  http_ipv4_sample.pcap  http_response_sample.pcap  mixed_sample.pcap  multi_dns_sample.pcap  pcapng_http_sample.pcapng  short_frame_sample.pcap  tcp_ipv4_sample.pcap  udp_ipv4_sample.pcap
tools/: generate_pengucore_test_pcaps.ps1
